--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "get-a-quote",
+  "homepage": "https://www.manchestermenu.com/getquote",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -37,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-app-rewired": "^2.1.8"
   }
 }
